--- a/Pregunta2/index2.html
+++ b/Pregunta2/index2.html
@@ -7,7 +7,7 @@
         <div class="header">
           <h2>SISTEMA DE VENTAS</h2>
         </div>
-        
+
         <div class="side">
           <h2>Productos</h2>
           <h2>Categorias</h2>
@@ -44,6 +44,13 @@
                 </div>
               </div>
 
+        </div>  
+        <div class="footer">
+                  <p><i class="fa fa-coffee"></i></p>
+                  <h3><a href="#">Explorar mas</a></h3>
+                  <img src="04.JPG">
+                </div>
+              </div>
         </div>
 
              
